crates/config/tests/snapshots/block_string_empty.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-empty

## Input

```mical
key |
```

## JSON

```json
{
  "key": ""
}
```

vim:ft=markdown
