crates/config/tests/snapshots/block_string_empty_body.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-empty-body

## Input

```mical
key |

a b

```

## JSON

```json
{
  "a": "b",
  "key": ""
}
```

vim:ft=markdown
