crates/config/tests/snapshots/block_string_empty_line.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-empty-line

## Input

```mical
foo |

  a

```

## JSON

```json
{
  "foo": "\na\n"
}
```

vim:ft=markdown
