crates/config/tests/snapshots/block_string_empty_lines_inside.snap
---
source: crates/config/tests/snapshots.rs
---
# block_string_empty_lines_inside

## Input

```mical
key |
  a

  b

```

## Json

```json
{
  "key": "a\n\nb\n"
}
```

vim:ft=markdown
