crates/config/tests/snapshots/block_string_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-eof

## Input

```mical
key |
  hello
```

## JSON

```json
{
  "key": "hello\n"
}
```

vim:ft=markdown
