crates/config/tests/snapshots/block_string_eof_end.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-eof-end

## Input

```mical
key |
  content
```

## JSON

```json
{
  "key": "content\n"
}
```

vim:ft=markdown
