crates/config/tests/snapshots/block_string_eof_no_newline.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-eof-no-newline

## Input

```mical
key |
  hello
```

## JSON

```json
{
  "key": "hello\n"
}
```

vim:ft=markdown
