crates/config/tests/snapshots/block_string_explicit_indent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-explicit-indent

## Input

```mical
key |2
      indented first line
  second line

```

## JSON

```json
{
  "key": "    indented first line\nsecond line\n"
}
```

vim:ft=markdown
