crates/config/tests/snapshots/block_string_explicit_indent_empty_first.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-explicit-indent-empty-first

## Input

```mical
key |2

  content

```

## JSON

```json
{
  "key": "\ncontent\n"
}
```

vim:ft=markdown
