crates/config/tests/snapshots/block_string_extra_indent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-extra-indent

## Input

```mical
foo |
  a
   b

```

## JSON

```json
{
  "foo": "a\n b\n"
}
```

vim:ft=markdown
