crates/config/tests/snapshots/block_string_fallback.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-fallback

## Input

```mical
a |not block
b >not fold
c |+not block
d |abc
e > text after
f |	after tab

```

## JSON

```json
{
  "a": "|not block",
  "b": ">not fold",
  "c": "|+not block",
  "d": "|abc",
  "e": "> text after",
  "f": "|\tafter tab"
}
```

vim:ft=markdown
